[gd_scene load_steps=10 format=1]

[ext_resource path="res://UI/TutorialManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/forced_action_overlay.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/tutorial_arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/processed_fonts/tutorial_text_rubik_36_bold.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Assets/processed_fonts/tutorial_text_rubik_36.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Assets/processed_fonts/info_overlay_body_rubik_26_italic.fnt" type="BitmapFont" id=6]
[ext_resource path="res://InputHandler.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="Animation" id=2]

length = 1.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow/Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.7, 1.4 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0, -90 ), Vector2( 0, -70 ), Vector2( 0, -90 ) ] }

[node name="TutorialManager" type="Node2D"]

z/z = 100
script/script = ExtResource( 1 )

[node name="RuleOverlay" type="Panel" parent="."]

visibility/visible = false
visibility/opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -112.0
margin/top = -113.0
margin/right = 778.0
margin/bottom = 1171.0
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

visibility/visible = false
visibility/opacity = 0.8
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/autoplay = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "autoplay"

[node name="Arrow" type="Node2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 4.53695 )

[node name="Sprite" type="Sprite" parent="Arrow"]

transform/pos = Vector2( 0, -90 )
texture = ExtResource( 3 )

[node name="Label" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 200.0
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="TapLabel" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 320.0
margin/right = 634.0
margin/bottom = 392.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.160784, 0.894118, 0.678431, 1 )
text = "Click anywhere to continue"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="InputHandler" parent="." instance=ExtResource( 7 )]

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


